js-1-3-4-type casting

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <title>Document</title>
 </head>
 <body>
+
+  <input type="text" id="age">
   
-  <script src="hello.js"></script>
+  <!-- <script src="hello.js"></script> -->
 </body>
 </html>
