--- a/1-4-연산자/index.html
+++ b/1-4-연산자/index.html
@@ -6,6 +6,6 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="6-browser.js"></script>
+  <script src="7-pratice.js"></script>
 </body>
 </html>
