--- a/1-6-반복문/index.html
+++ b/1-6-반복문/index.html
@@ -6,6 +6,6 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="4-for-quiz2.js"></script>
+  <script src="11-종합연습1.js"></script>
 </body>
 </html>
