js-계산기 완성

--- a/CALCULATOR/index.html
+++ b/CALCULATOR/index.html
@@ -34,6 +34,7 @@
 
   <section class="card" id="logs">
     <ul class="log-entries"></ul>
+    <div class="showAllBox"></div>
   </section>
 </body>
 
